[project]
name = "mari"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jetxeberria", email = "etxeberria_92@hotmail.com"},
]
dependencies = [
    "copier>=9.3.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
